# scara_mujoco_ros2

./: .gitignore  LICENSE  README.md
scara_mujoco_bringup_pkg/: CMakeLists.txt  package.xml
scara_mujoco_bringup_pkg/launch/: test_trayectory_controller_scara.launch.py
scara_mujoco_bringup_pkg/rviz/: scara_trayectory_rviz.rviz
scara_mujoco_bringup_pkg/scara_mujoco_bringup_pkg/: multi_tray.py
scara_mujoco_bringup_pkg/worlds/: MiMundoTioMiMundo
scara_mujoco_description_pkg/: CMakeLists.txt  package.xml
scara_mujoco_description_pkg/launch/: scara_display.launch.xml
scara_mujoco_description_pkg/mujoco_models/: test_scara.xml
scara_mujoco_description_pkg/rviz/: scara_rviz.rviz
scara_mujoco_description_pkg/urdf/: camera_sensor.xacro  imu_sensor.xacro  lidar_sensor.xacro  scara_trajectory_controller.xacro  scara_urdf.xacro  trajectory_controller.xacro
